feat: MVP5-002_event_sequence 발급 및 재시작 복구 경로 구현 (#48)